[package]
name = "bevy_fly_cam"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A Simple Flycam plugin for Bevy 0.14"
repository = "https://github.com/JadonBelair/bevy_fly_cam"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_core_pipeline"] }
